# RAG-Pipeline-WikiVN

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  setup-ssl.sh
.github/workflows/: build.yml  deploy.yml
.mimocode/plans/: 1782958919952-jolly-garden.md  1782967780101-hollow-violet.md
.omo/run-continuation/: ses_0dc3b35f3ffePZ0uNSk3Ta5h7I.json
data/: rag_storage.db-shm  rag_storage.db-wal
data/benchmarks/: latency_1783910183.csv  latency_1783910183.json  latency_1784795132.csv  latency_1784795132.json  latency_1784795376.csv  latency_1784795376.json  (+14 more)
docs/: api.md  chunking.md  dataset.md  deploy.md  eval.md  frontend.md  generation.md  ingest_pipeline.md  latency.md  memory-plan.md  memory.md  query_processing.md  retrieval.md  storage.md
frontend/: index.html  vite.config.ts
scripts/: bench_sse.py  benchmark_latency.py  chunk_corpus.py  demo_rag.py  eval_rag.py  extract_eval.py  generate_eval_suite.py  ingest_and_index.py  init_deployment.py  smoke_memory.py  verify_chunks.py
tests/: test_api.py  test_bm25_index.py  test_chunker.py  test_chunking_pipeline.py  test_cleaner.py  test_compactor.py  test_embedders.py  test_eval.py  test_generation.py  test_guardrails.py  test_hybrid_retriever.py  test_indexing_service.py  test_ingestion.py  test_logging.py  test_memory.py  test_normalizer.py  test_phase2_retrieval.py  test_pipeline.py  test_query_pipeline.py  test_retrieval_pipeline.py  test_rrf.py  test_storage.py  test_structure_chunker.py  test_vector_store.py
(+86 files in other folders)
